# Lexion

./: .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: CLAUDE.md  framework_guidelines.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  exec.py  package.json  pyproject.toml
backend/app/: main.py
backend/app/shared/: config.py  db.py  language.py
backend/app/song_processing/: lyrics.py  lyrics_conversion.py  models.py  repository.py  router.py  service.py  title_cleaning.py  youtube.py
backend/app/word_analysis/: dictionary.py  models.py  service.py  syllables.py  tokenizer.py
backend/migrations/: 0001_init.sql
backend/tests/: test_course_export_import.py  test_feature_flags.py  test_kanji_candidates.py  test_lyrics_conversion.py  test_new_endpoints.py  test_no_youtube_download.py  test_ownership.py  test_processing_cache.py  test_title_cleaning.py  test_word_analysis_timed.py
context/: README.md  adding-a-feature.md  legal-constraints.md  system-map.md
docs/: product-architecture.md
frontend/: .env.example  Dockerfile  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/composables/: useAudioExtraction.ts  useLineGroupedWords.ts  useLyricsPipeline.ts  useModelCache.ts  useWhisperClient.ts  useWordPlaybackTiming.ts
frontend/app/lyrics-strategies/: asrStrategy.ts  audioSpeechRuns.ts  charPositionAlignment.ts  hybridStrategy.ts  index.ts  legacyStrategy.ts  sequenceAlignment.ts  wordAlignment.ts
frontend/app/pages/: index.vue
frontend/app/plugins/: features.client.ts
(+42 files in other folders)
