[project]
name = "app"
version = "0.1.0"
description = "Automated song word breakdown for language learning"
requires-python = ">=3.11"
dependencies = [
    # Core Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Database
    "supabase>=2.0.0",
    "psycopg2-binary>=2.9.9",
    # YouTube & Lyrics
    "yt-dlp>=2026.7.4",
    # Japanese NLP
    "fugashi[unidic]>=1.3.0",
    "jamdict>=0.1a11",
    "pykakasi>=2.2.1",
    "jaconv>=0.4.0",
    # Language Detection
    "langdetect>=1.0.9",
    # Utils
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "jamdict-data>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

# Phase 3: Multi-language support
multilang = [
    "jieba>=0.42.1",      # Chinese
    "konlpy>=0.6.0",      # Korean
    "pymorphy2>=0.9.1",   # Russian
]

# Phase 4: AI enhancement
ai = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
